# Deskling

./: .gitignore  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/rules/: neko-assistant.mdc
docs/: deskling-pet-package-v1.md  deskling-voice-pack-v1.md  live2d-development.md  pet-renderer-architecture.md
scripts/: fetch-stt-model.mjs  gen-pet-frames.ps1  gen-wake-sounds.ps1  gen-xuebao-a.mjs  gen-xuebao-b.mjs  gen-xuebao-c.mjs  gen-xuebao.mjs
src/: App.tsx  main.tsx  scheduledTasks.ts  settings.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/pets/com.deskling.xuebao/: manifest.json
src-tauri/resources/pets/com.deskling.xuebao/licenses/: NOTICE.txt
src-tauri/resources/pets/com.deskling.xuebao/persona/: system.md
src-tauri/resources/skills/web-search/: SKILL.md  search.cjs
src-tauri/resources/tts/beep/: manifest.json
src-tauri/src/: lib.rs  live2d_runtime.rs  main.rs  memory.rs  pet_packages.rs  provider.rs  scheduled_tasks.rs  skills.rs  stt.rs  tools.rs  tts.rs  wake.rs
src/chat/: api.ts  imagePreview.ts  mockData.ts  speech.ts  store.ts  types.ts
src/chat/components/: ChatBackdrop.tsx  ChatComposer.tsx  HistoryCard.tsx  HistorySidebar.tsx  ImagePreviewModal.tsx  MessageBubble.tsx  MessageList.tsx  MessageToolbar.tsx  PixelNoiseField.tsx  StreamingText.tsx  ThinkingBlock.tsx  ToolCallBlock.tsx  TypingIndicator.tsx
src/components/: MemoryCard.tsx  PetShowcase.tsx  ProviderCard.tsx  ProviderModal.tsx  ProviderSettings.tsx  Sidebar.tsx  StylePreview.tsx  Titlebar.tsx  icons.tsx  ui.tsx
src/components/pixel/: FluidBackdrop.tsx  GLPixelFrame.tsx  PixelActionRow.tsx  PixelBackdrop.tsx  PixelButton.tsx  PixelCard.tsx  PixelConfirmModal.tsx  PixelDivider.tsx  PixelFrame.tsx  PixelIconButton.tsx  PixelInput.tsx  PixelModal.tsx  PixelPage.tsx  PixelProgress.tsx  PixelScrollArea.tsx  PixelSection.tsx  PixelSelect.tsx  PixelSettingRow.tsx  PixelSlider.tsx  PixelSurface.tsx  PixelSwitch.tsx  PixelTag.tsx  PixelTextarea.tsx  PixelTip.tsx  PixelWell.tsx  Sidebar.tsx  Titlebar.tsx  glPixelRenderer.ts  icons.tsx  palettes.ts  useElementSize.ts  windowIcons.tsx
src/components/pixel/backdrops/: cellular.ts  curlFlow.ts  glUtils.ts  index.ts  reaction.ts  turbulence.ts  types.ts
src/hooks/: useAppliedTheme.ts  useTheme.ts
src/pages/: About.tsx  Debug.tsx  Home.tsx  Pet.tsx  Settings.tsx  Tasks.tsx
src/pet/: animations.ts  live2dCore.ts  live2dEngine.ts  packages.ts
src/pet/renderers/: DeferredPuppetRenderer.tsx  Live2DCubismRenderer.tsx  PetRenderer.tsx  SpriteSheetRenderer.tsx  types.ts
src/styles/: theme.css  theme.ts
src/windows/: ChatWindow.tsx  PetWindow.tsx  TrayMenu.tsx
