[package]
name = "deskling"
version = "0.1.0"
description = "A Tauri App"
authors = ["WJZ_P"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deskling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
# HTTP 客户端：AI Provider 请求（含流式 SSE）；rustls 避免依赖系统 OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
# agent 工具执行：tokio::process 跑命令；sync 的 oneshot 用于审批阻塞唤醒
tokio = { version = "1", features = ["process", "sync", "io-util", "macros", "rt"] }
sherpa-onnx = "1.13.4"
cpal = "0.18.1"
# 唤醒词中文 → 带调拼音（转 KWS 模型的声母/韵母 token 格式）
pinyin = "0.10"

# 命令输出编码回退：中文 Windows 控制台输出是 GBK(CP936)，UTF-8 解码失败时用它救乱码
[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"
# 系统级鼠标键状态（GetAsyncKeyState）：OS 拖窗模态循环里网页收不到指针
# 事件，桌宠窗靠它区分「拖到屏幕边顶住不动」和「已经松手」（版本对齐依赖树里已有的 0.59）
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
